# wordrecovery-SF

./: README.md  Version_3.0-alpha-source.7z  readme.txt
.github/workflows/: release.yml
mobile/: .gitignore  README.md  capacitor.config.json  package.json
socrtwo/socrtwo/: index.html  manifest.webmanifest  sw.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
web/: app.js  styles.css
