[package]
name = "wordrecovery"
version = "3.1.0"
description = "Word Recovery — multiplatform document recovery"
authors = ["socrtwo"]
edition = "2021"

[lib]
name = "wordrecovery_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
